--- a/src/index.css
+++ b/src/index.css
@@ -48,3 +48,9 @@
     font-size: 26px;
   }
 }
+
+@media (max-width: 400px) {
+  .title{
+    font-size: 22px;
+  }
+}
